--- a/sass/global.scss
+++ b/sass/global.scss
@@ -8,18 +8,84 @@
 @import "_typography.scss"; // Typography
 @import "_navigation.scss"; // _navigation
 
-// Header
-.center-wrapper {
+//////////////////////////////////////
+// *, html, body
+//////////////////////////////////////
 
-   height: 50px;
+* {
+
+   margin: 0;
+   padding: 0;
+
+}
+
+html, body {
+
+   min-height: 100%;
+
+}
+
+//////////////////////////////////////
+// Container and Wrapper
+//////////////////////////////////////
+
+#wrap {
+
+   height: 100%;
+   min-height: 100%;
+   margin: 0 auto;
+
+}
+
+.container {
+
+   max-width: 1024px;
+   margin: 0 auto;
+
+}
+
+//////////////////////////////////////
+// Top Bar
+//////////////////////////////////////
+.top-bar {
+
+   width: 100%;
+   padding-bottom: 1%;
+   margin-bottom: 1%;
 
    h1 {
 
+      font-size: 28px;
+      font-color: $main-color;
       text-align: center;
-      font-size: 30px;
-      text-shadow: 0;
-      padding-top: 1%;
-      padding-bottom: 1%;
+
+   }
+
+}
+
+//////////////////////////////////////
+// box
+//////////////////////////////////////
+.box {
+
+   width: 50%;
+   height: 100px;
+   background: $main-color;
+   border: 1px solid $secondary-color;
+
+   p {
+
+      text-align: center;
+      margin-top: 15%;
+
+   }
+
+   a:link {
+
+      color: $secondary-color;
+      text-decoration: none;
+
+
 
    }
 
