--- a/css/global.css
+++ b/css/global.css
@@ -180,21 +180,29 @@ html, body {
 
 .top-bar {
   width: 100%;
-  padding-bottom: 1%;
-  margin-bottom: 1%; }
+  padding-bottom: 2%;
+  margin-bottom: 2%; }
   .top-bar h1 {
     font-size: 28px;
     font-color: #3366ff;
-    text-align: center; }
+    text-align: center;
+    margin-top: 3%; }
 
 .box {
-  width: 50%;
-  height: 100px;
-  background: #3366ff;
-  border: 1px solid white; }
-  .box p {
+  width: 100%;
+  height: 50px;
+  background: #3366ff; }
+  .box h1 {
     text-align: center;
-    margin-top: 15%; }
+    padding-top: 3%;
+    font-size: 20px; }
   .box a:link {
     color: white;
-    text-decoration: none; }
+    text-decoration: none;
+    text-align: center; }
+
+.hr {
+  border-bottom: 3px solid #3366ff;
+  width: 100%;
+  margin-top: 2%;
+  margin-bottom: 2%; }
