--- a/sass/global.scss
+++ b/sass/global.scss
@@ -50,33 +50,34 @@ html, body {
 .top-bar {
 
    width: 100%;
-   padding-bottom: 1%;
-   margin-bottom: 1%;
+   padding-bottom: 2%;
+   margin-bottom: 2%;
 
    h1 {
 
       font-size: 28px;
       font-color: $main-color;
       text-align: center;
+      margin-top: 3%;
 
    }
 
 }
 
 //////////////////////////////////////
-// box
+// Tiles
 //////////////////////////////////////
 .box {
 
-   width: 50%;
-   height: 100px;
+   width: 100%;
+   height: 50px;
    background: $main-color;
-   border: 1px solid $secondary-color;
 
-   p {
+   h1 {
 
       text-align: center;
-      margin-top: 15%;
+      padding-top: 3%;
+      font-size: 20px;
 
    }
 
@@ -84,9 +85,20 @@ html, body {
 
       color: $secondary-color;
       text-decoration: none;
-
-
+      text-align: center;
 
    }
+}
+
+//////////////////////////////////////
+// HR
+//////////////////////////////////////
+
+.hr {
+
+   border-bottom: 3px solid $main-color;
+   width: 100%;
+   margin-top: 2%;
+   margin-bottom: 2%;
 
 }
